fix(pdcst): fixed slider on mobile

--- a/src/apps/pdcst/Slider.module.css
+++ b/src/apps/pdcst/Slider.module.css
@@ -3,10 +3,11 @@
   font-size: 1rem;
   position: relative;
   user-select: none;
+  touch-action: none;
 }
 
 .track {
-  width: 100%;
+  width: calc(100% - 0.5em);
   height: 0.5em;
   margin: 0.25em 0.5em;
   cursor: pointer;
